# codex2

./: 30-day-sprint-offer-07.htm  5signalsmethod.htm  Admission Sight – Elite Coaching Program – VSL Offer 2 – AdmissionSight.html  Amazon FBA Accelerator By Hussam Ansari.html  Book Your Call.html  Continual Harvest Workshop Registration.html  Funnel Audit — Jordan _ Outlier STR Revenue Growth _ ProfitScalePartners.html  Improving Your Landing Page for Better Engagement.txt  README.md  VSL Optin Page.html  app.py  pyproject.toml
src/flipfinder/: __init__.py  analysis.py  collectors.py
tests/: test_analysis.py
