[project]
name = "mandolin-flip-finder"
version = "0.1.0"
description = "Personal-use analyzer for recent Reverb and eBay mandolin sales"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "streamlit>=1.37.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
